# gameoflife

./: CMakeLists.txt  README  main.c
.github/workflows/: cmake.yml
console/: CMakeLists.txt  ansi_console.c  board_drawer.h
game/: CMakeLists.txt  board.c  board.h  life.c  life.h
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeFiles_2GAMEOFLIFE_8dir_2link_8txt.html  CMakeFiles_2my__test_8dir_2link_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  CTestCostData_8txt.html  Purpose.html  Rules.html  ansi__console_8c.html  ansi__console_8c_8o_8d.html  ansi__console_8c__incl.map  ansi__console_8c__incl.md5  board__drawer_8h.html  board__drawer_8h__dep__incl.map  board__drawer_8h__dep__incl.md5  board__drawer_8h__incl.map  board__drawer_8h__incl.md5  board__drawer_8h_source.html  console_2CMakeFiles_2board_8dir_2link_8txt.html  console_2CMakeLists_8txt.html  dir_03e9d999092c09e15de1be01ad164501.html  dir_2da8d39cd15d76dd19e9cf9717d75366.html  dir_37c6514aeece95293041e34c0f2e0784.html  dir_4a2c4dfd925f922463bca80976e64025.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5a420d0cb05e70e797572719d0ddf1ae.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_65286b81b8e2f51a9ba4025453026bbe.html  dir_68d13bbd874068e91bf2b775754446e8.html  dir_80e5431e2c14281a39eac6757a6cb02b.html  dir_817f0e3adbcee3b29c1eedb5412bd1de.html  dir_901c18e774dcb17432eb529737c45e30.html  dir_9af5635a31504e9f0d8f0835a2a6a48f.html  dir_9f97b40203d0b7782e2ba57c500dd0f3.html  dir_a907cf3de4cbcd38a4186eb7305e38a8.html  dir_a9bae5807f7e2d4fa8e0fbeebe6024bb.html  dir_ad0855162e571b0298c325381533f4dd.html  (+29 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  (+1 more)
latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  CMakeFiles_2GAMEOFLIFE_8dir_2link_8txt.tex  CMakeFiles_2my__test_8dir_2link_8txt.tex  CMakeLists_8txt.tex  CTestCostData_8txt.tex  Purpose.tex  Rules.tex  ansi__console_8c.tex  ansi__console_8c_8o_8d.tex  ansi__console_8c__incl.md5  board__drawer_8h.tex  board__drawer_8h__dep__incl.md5  board__drawer_8h__incl.md5  console_2CMakeFiles_2board_8dir_2link_8txt.tex  console_2CMakeLists_8txt.tex  dir_03e9d999092c09e15de1be01ad164501.tex  dir_2da8d39cd15d76dd19e9cf9717d75366.tex  dir_37c6514aeece95293041e34c0f2e0784.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_5a420d0cb05e70e797572719d0ddf1ae.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_65286b81b8e2f51a9ba4025453026bbe.tex  dir_817f0e3adbcee3b29c1eedb5412bd1de.tex  dir_9af5635a31504e9f0d8f0835a2a6a48f.tex  dir_a907cf3de4cbcd38a4186eb7305e38a8.tex  dir_a9bae5807f7e2d4fa8e0fbeebe6024bb.tex  dir_ad0855162e571b0298c325381533f4dd.tex  dir_def686d5028acb37a27ce1ac81625b06.tex  files.tex  game_2CMakeFiles_2life_8dir_2link_8txt.tex  game_2CMakeLists_8txt.tex  index.tex  life_8c.tex  life_8c_8o_8d.tex  life_8c__incl.md5  life_8h.tex  life_8h__dep__incl.md5  life_8h__incl.md5  (+7 more)
tests/: tests.c
